fix implementation and review comments